Zalążek walidacji danych

--- a/mnis_ver2.0/mnis_ver2.0.csproj
+++ b/mnis_ver2.0/mnis_ver2.0.csproj
@@ -102,9 +102,6 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -117,6 +114,8 @@
     <Compile Include="Models\Singal.cs" />
     <Compile Include="Models\Table.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationRules\FilterValidationRule.cs" />
+    <Compile Include="ViewModels\FilterViewModel.cs" />
     <Compile Include="Views\Graph.xaml.cs">
       <DependentUpon>Graph.xaml</DependentUpon>
     </Compile>
