--- a/mnis_ver2.0/mnis_ver2.0.csproj
+++ b/mnis_ver2.0/mnis_ver2.0.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidationRules\FilterValidationRule.cs" />
     <Compile Include="ValidationRules\SignalValidationRule.cs" />
+    <Compile Include="ValidationRules\Validator.cs" />
     <Compile Include="ViewModels\FilterViewModel.cs" />
     <Compile Include="ViewModels\SignalViewModel.cs" />
     <Compile Include="Views\Graph.xaml.cs">
