--- a/mnis_ver2.0/mnis_ver2.0.csproj
+++ b/mnis_ver2.0/mnis_ver2.0.csproj
@@ -133,6 +133,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <None Include="ClassDiagram1.cd" />
     <None Include="mnis_ver2.0_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="UML.cd" />
